--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -5,8 +5,10 @@
 
 $link-hover: #fce38a; 
 $light-blue:  #95e1d3;
+$link-pink: #f38181;
 $heading-color: #333;
 $gray-bg: #f8f8f8;
+
 
 
 // Fonts
